@@ -150,9 +150,21 @@ our %S = (%S,
     [ 'Other',               0 ],
   ],
   age_ratings     => {
-    -1 => 'Unknown',
-    0  => 'All ages',
-    map { $_ => $_.'+' } 6..18
+    -1 => [ 'Unknown' ],
+    0  => [ 'All ages' ,'CERO A' ],
+    6  => [ '6+' ],
+    7  => [ '7+' ],
+    8  => [ '8+' ],
+    9  => [ '9+' ],
+    10 => [ '10+' ],
+    11 => [ '11+' ],
+    12 => [ '12+', 'CERO B' ],
+    13 => [ '13+' ],
+    14 => [ '14+' ],
+    15 => [ '15+', 'CERO C' ],
+    16 => [ '16+' ],
+    17 => [ '17+', 'CERO D' ],
+    18 => [ '18+', 'CERO Z' ],
   },
   release_types   => [
     'Complete',
