@@ -3,6 +3,7 @@
 	- Javascript date input
 	- Resolution field for release entries
 	- Voiced field for release entries
+	- Show comparable CERO ratings on /r+/edit input field
 
 2.3 - 2009-04-01
 	- No page reload needed when changing rlist status from vn page
